unpackaged/main/default/objects/conference360__Event_User_Identity__c/conference360__Event_User_Identity__c.object-meta.xml
<CustomObject>
    <label>Event User Identity</label>
    <nameField>
        <displayFormat>EUI-{000000}</displayFormat>
        <label>Event User Identity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event User Identities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>