unpackaged/main/default/objects/conference360__Event_User_Identity__c/fields/conference360__Contact__c.field-meta.xml
<CustomField>
    <fullName>conference360__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Events_User_Identities</relationshipName>
    <type>Lookup</type>
</CustomField>