unpackaged/main/default/objects/conference360__Event_User_Identity__c/fields/conference360__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Expiration_Date__c</fullName>
    <description>Date/Time when this identity method expires.</description>
    <inlineHelpText>Date/Time when this identity method expires.</inlineHelpText>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>