unpackaged/main/default/objects/conference360__Event_User_Identity__c/fields/conference360__Expired__c.field-meta.xml
<CustomField>
    <fullName>conference360__Expired__c</fullName>
    <formula>DATETIMEVALUE( conference360__Expiration_Date__c ) &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>