unpackaged/main/default/objects/conference360__Event_User_Identity__c/fields/conference360__Provider__c.field-meta.xml
<CustomField>
    <fullName>conference360__Provider__c</fullName>
    <description>Type of platform or mechanism that provides a guarantee for the identity of a user.</description>
    <inlineHelpText>Type of platform or mechanism that provides a guarantee for the identity of a user.</inlineHelpText>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>OAuth</fullName>
            </value>
            <value>
                <fullName>OAuth/Google</fullName>
            </value>
            <value>
                <fullName>OAuth/Facebook</fullName>
            </value>
            <value>
                <fullName>OAuth/LinkedIn</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Biometric</fullName>
            </value>
            <value>
                <fullName>Biometric/iOS</fullName>
            </value>
            <value>
                <fullName>Biometric/Android</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Device ID iOS</fullName>
            </value>
            <value>
                <fullName>Device ID Android</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>