unpackaged/main/default/objects/conference360__Event_User_Identity__c/fields/conference360__Verified_and_Valid__c.field-meta.xml
<CustomField>
    <fullName>conference360__Verified_and_Valid__c</fullName>
    <formula>conference360__Expired__c  != TRUE
&amp;&amp;

!ISBLANK(conference360__Verified_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verified and Valid</label>
    <type>Checkbox</type>
</CustomField>