unpackaged/main/default/objects/conference360__Event_User_Identity__c/fields/conference360__Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Verified_Date__c</fullName>
    <label>Verified Date</label>
    <type>DateTime</type>
</CustomField>